a little bit of the main page

--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,7 @@
 	<title>Главная</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/fonts.css">
+	<link rel="stylesheet" href="css/owl.carousel.css">
 	<link rel="stylesheet" href="css/main.css">
 	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -16,10 +17,344 @@
     <![endif]-->
 </head>
 <body>
-	<header class="header">
-	</header>
 
 	<main class="main">
+		<section class="general-block">
+			<div class="container">
+				<header class="header">
+					<div class="header-top clearfix">
+						<div class="logo pull-left">
+							<h1 class="logo-text">Estetika</h1>
+							<div class="logo-img-container img-container">
+								<img src="images/logo.svg" alt="img" class="img-responsive logo-img">
+							</div>
+						</div>
+						<div class="header-top__info pull-right text-right">
+							<a href="#" class="header-top__info-link">Заказать звонок</a>
+							<a href="#" class="header-top__info-tel">+7 (4212) 45-66-99</a>
+						</div>
+					</div>
+					<div class="header-bottom">
+						<nav class="nav">
+							<ul class="nav-list">
+								<li class="nav-item">
+									<a href="#" class="nav-link">О Клинике</a>
+								</li>
+								<li class="nav-item">
+									<a href="#" class="nav-link">УСЛУГИ</a>
+								</li>
+								<li class="nav-item">
+									<a href="#" class="nav-link">Врачи</a>
+								</li>
+								<li class="nav-item">
+									<a href="#" class="nav-link">Цены</a>
+								</li>
+								<li class="nav-item">
+									<a href="#" class="nav-link">Истории лечения</a>
+								</li>
+								<li class="nav-item">
+									<a href="#" class="nav-link">Акции и скидки</a>
+								</li>
+								<li class="nav-item">
+									<a href="#" class="nav-link">Контакты</a>
+								</li>
+							</ul>
+						</nav>
+					</div>
+				</header>
+				<div class="row">
+					<div class="general-block__center col-sm-8">
+						<div class="general-block__title">
+							Современная стоматологическая помощь для взрослых и детей
+						</div>
+						<a href="#" class="general-block__link btn_default">Записаться на прием</a>
+					</div>
+				</div>
+				<a href="#" class="general-block__bottom-arrow"></a>
+			</div>
+		</section>
+
+		<section class="cabinets-block">
+			<div class="container">
+				<div class="cabinets-block__title">
+					Самая современная клиника
+				</div>
+				<div class="cabinets-block__description">
+					В клинике предлагается самый широкий спектр стоматологических услуг, оказываемых с применением новейших технологий, материалов, методов обследования и обезболивания. Зубосохраняющие операции являются для нас приоритетными, поэтому такие радикальные меры, как, например, удаление зуба, применяются только в исключительных случаях. Лечение на максимально высоком уровне с акцентом на превосходный эстетический результат, сочувствие к проблеме пациента и качественный сервис — вот те составляющие, которые определяют политику научно-клинического центра Estetica!
+				</div>
+				<ul class="cabinet-block__list row">
+					<li class="cabinet-block__item col-sm-6">
+						<a href="#" class="cabinet-block__link">
+							<div class="cabinet-block__img-container img-container">
+								<img src="images/cabinet-1.png" alt="img" class="img-responsive cabinet-block__img">
+							</div>
+						</a>
+					</li>
+					<li class="cabinet-block__item col-sm-6">
+						<a href="#" class="cabinet-block__link">
+							<div class="cabinet-block__img-container img-container">
+								<img src="images/cabinet-2.png" alt="img" class="img-responsive cabinet-block__img">
+							</div>
+						</a>
+					</li>
+					<li class="cabinet-block__item col-sm-6">
+						<a href="#" class="cabinet-block__link">
+							<div class="cabinet-block__img-container img-container">
+								<img src="images/cabinet-2.png" alt="img" class="img-responsive cabinet-block__img">
+							</div>
+						</a>
+					</li>
+					<li class="cabinet-block__item col-sm-6 cabinet-block__item_last-block">
+						<div class="cabinet-block__item-title">
+							Научно-клинический центр эстетическойстоматологии Estetica — это:
+						</div>
+						<ul class="cabinet-block__item-list">
+							<li class="cabinet-block__item-item">
+								эстетическая стоматология высочайшего уровня
+							</li>
+							<li class="cabinet-block__item-item">
+								команда ответственных специалистов
+							</li>
+							<li class="cabinet-block__item-item">
+								передовые методики лечения
+							</li>
+							<li class="cabinet-block__item-item">
+								современное оборудование и расходные материалы
+							</li>
+							<li class="cabinet-block__item-item">
+								безупречный сервис до, во время и после лечения
+							</li>
+						</ul>
+					</li>
+				</ul>
+			</div>
+		</section>
+
+		<section class="doctors-block">
+			<div class="container">
+				<div class="doctors-block__title">Врачи стоматологи</div>
+				<div class="row">
+					<div class="doctors-block__description col-sm-7">Среди наших ведущих сотрудников нет равнодушных, а когда вкладываешь в свое дело все силы и эмоции, то и результат всегда будет соответствующим</div>
+				</div>
+				<ul class="doctors-block__list row">
+					<li class="doctors-block__item col-sm-4">
+						<div class="doctors-block__img-container img-container">
+							<img src="images/doctor-1.png" alt="img" class="doctors-block__img img-responsive">
+						</div>
+						<div class="doctors-block__doctor-name">Софья Курдас</div>
+						<div class="doctors-block__doctor-abil">Ортодонтия, детская стоматология</div>
+					</li>
+					<li class="doctors-block__item col-sm-4">
+						<div class="doctors-block__img-container img-container">
+							<img src="images/doctor-2.png" alt="img" class="doctors-block__img img-responsive">
+						</div>
+						<div class="doctors-block__doctor-name">Людмила Гузева</div>
+						<div class="doctors-block__doctor-abil">Терапия</div>
+					</li>
+					<li class="doctors-block__item col-sm-4">
+						<div class="doctors-block__img-container img-container">
+							<img src="images/doctor-3.png" alt="img" class="doctors-block__img img-responsive">
+						</div>
+						<div class="doctors-block__doctor-name">Николай Бельды</div>
+						<div class="doctors-block__doctor-abil">Ортодонтия, хирургия</div>
+					</li>
+				</ul>
+				<a href="#" class="btn_default doctors-block__btn">ВСЕ ВРАЧИ КЛИНИКИ</a>
+			</div>
+		</section>
+
+		<section class="responses-block">
+			<div class="container">
+				<div class="responses-block__title">Отзывы</div>
+				<ul class="responses-block__list">
+					<li class="responses-block__item">
+						<div class="responses-block__item-name">Скрипкина Галина</div>
+						<div class="responses-block__item-description">
+							Это вообще самый лучший врач в мире! Да, это очень хороший доктор! Я сама из Саратова, и теперь, не смотря на расстояния, буду ездить только к ней и рекомендовать ее всем своим знакомым! Поразило человеческое отношение. Нет раскрутки на какие - то ненужные обследования и процедуры, которые не только сомнительны для пациента, но могут ему и навредить.
+						</div>	
+					</li>
+					<li class="responses-block__item">
+						<div class="responses-block__item-name">Скрипкина Галина</div>
+						<div class="responses-block__item-description">
+							Это вообще самый лучший врач в мире! Да, это очень хороший доктор! Я сама из Саратова, и теперь, не смотря на расстояния, буду ездить только к ней и рекомендовать ее всем своим знакомым! Поразило человеческое отношение. Нет раскрутки на какие - то ненужные обследования и процедуры, которые не только сомнительны для пациента, но могут ему и навредить.
+						</div>	
+					</li>
+					<li class="responses-block__item">
+						<div class="responses-block__item-name">Скрипкина Галина</div>
+						<div class="responses-block__item-description">
+							Это вообще самый лучший врач в мире! Да, это очень хороший доктор! Я сама из Саратова, и теперь, не смотря на расстояния, буду ездить только к ней и рекомендовать ее всем своим знакомым! Поразило человеческое отношение. Нет раскрутки на какие - то ненужные обследования и процедуры, которые не только сомнительны для пациента, но могут ему и навредить.
+						</div>	
+					</li>
+				</ul>
+			</div>
+		</section>
+
+		<section class="prices-block">
+			<div class="container">
+				<div class="prices-block__title">Услуги и цены</div>
+				<div class="row">
+					<div class="prices-block__description col-sm-8">
+						В научно-клиническом центре челюстно-лицевой хирургии и стоматологии Estetica действует максимально прозрачная ценовая программа. Мы уважаем себя и своих пациентов, поэтому у нас исключены скрытые доплаты и надбавки, а также прочие уловки, свидетельствующие о нечистоплотности руководства клиники. Кроме того, лечащий врач всегда охотно отвечает на все интересующие вопросы.
+					</div>
+				</div>
+				<ul class="prices-block__list row">
+					<li class="prices-block__item col-sm-4">
+						<a href="#" class="prices-block__link">
+							<div class="prices-block__item-title">
+								Лечение зубов
+							</div>
+							<div class="prices-block__item-price">
+								от 0 000 ₽
+							</div>
+						</a>
+					</li>
+					<li class="prices-block__item col-sm-4">
+						<a href="#" class="prices-block__link">
+							<div class="prices-block__item-title">
+								Имплантация
+							</div>
+							<div class="prices-block__item-price">
+								от 0 000 ₽
+							</div>
+						</a>
+					</li>
+					<li class="prices-block__item col-sm-4">
+						<a href="#" class="prices-block__link">
+							<div class="prices-block__item-title">
+								Удаление зубов
+							</div>
+							<div class="prices-block__item-price">
+								от 0 000 ₽
+							</div>
+						</a>
+					</li>
+					<li class="prices-block__item col-sm-4">
+						<a href="#" class="prices-block__link">
+							<div class="prices-block__item-title">
+								Протезирование
+							</div>
+							<div class="prices-block__item-price">
+								от 0 000 ₽
+							</div>
+						</a>
+					</li>
+					<li class="prices-block__item col-sm-4">
+						<a href="#" class="prices-block__link">
+							<div class="prices-block__item-title">
+								Брекеты
+							</div>
+							<div class="prices-block__item-price">
+								от 0 000 ₽
+							</div>
+						</a>
+					</li>
+					<li class="prices-block__item col-sm-4">
+						<a href="#" class="prices-block__link">
+							<div class="prices-block__item-title">
+								Лечение десен
+							</div>
+							<div class="prices-block__item-price">
+								от 0 000 ₽
+							</div>
+						</a>
+					</li>
+					<li class="prices-block__item col-sm-4">
+						<a href="#" class="prices-block__link">
+							<div class="prices-block__item-title">
+								Хирургия
+							</div>
+							<div class="prices-block__item-price">
+								от 0 000 ₽
+							</div>
+						</a>
+					</li>
+					<li class="prices-block__item col-sm-4">
+						<a href="#" class="prices-block__link">
+							<div class="prices-block__item-title">
+								Отбеливание зубов
+							</div>
+							<div class="prices-block__item-price">
+								от 0 000 ₽
+							</div>
+						</a>
+					</li>
+					<li class="prices-block__item col-sm-4">
+						<a href="#" class="prices-block__link">
+							<div class="prices-block__item-title">
+								Гигиена
+							</div>
+							<div class="prices-block__item-price">
+								от 0 000 ₽
+							</div>
+						</a>
+					</li>
+				</ul>
+			</div>
+		</section>
+
+		<section class="main-slider-block">
+			<div class="container">
+				<div class="owl-carousel owl-main-slider">
+					<div>
+						<div class="row clearfix">
+							<div class="owl-main-slider__title col-sm-12">ЭКОНОМЬТЕ НА ЛЕЧЕНИИ</div>
+							<div class="owl-main-slider__description col-sm-8">
+								В центре челюстно-лицевой хирургии и эстетики Вы можете использовать материнский капитал, а после лечения оформить налоговый вычет.
+							</div>
+							<div class="owl-main-slider__img-container img-container col-sm-3 col-sm-offset-1">
+								<img src="images/slider-rub.svg" alt="img" class="img-responsive owl-main-slider__img">
+							</div>
+						</div>
+					</div>
+					<div>
+						<div class="row clearfix">
+							<div class="owl-main-slider__title col-sm-12">ЭКОНОМЬТЕ НА ЛЕЧЕНИИ</div>
+							<div class="owl-main-slider__description col-sm-8">
+								В центре челюстно-лицевой хирургии и эстетики Вы можете использовать материнский капитал, а после лечения оформить налоговый вычет.
+							</div>
+							<div class="owl-main-slider__img-container img-container col-sm-3 col-sm-offset-1">
+								<img src="images/slider-rub.svg" alt="img" class="img-responsive owl-main-slider__img">
+							</div>
+						</div>
+					</div>
+					<div>
+						<div class="row clearfix">
+							<div class="owl-main-slider__title col-sm-12">ЭКОНОМЬТЕ НА ЛЕЧЕНИИ</div>
+							<div class="owl-main-slider__description col-sm-8">
+								В центре челюстно-лицевой хирургии и эстетики Вы можете использовать материнский капитал, а после лечения оформить налоговый вычет.
+							</div>
+							<div class="owl-main-slider__img-container img-container col-sm-3 col-sm-offset-1">
+								<img src="images/slider-rub.svg" alt="img" class="img-responsive owl-main-slider__img">
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<section class="map-block">
+			<div class="container">
+				<div class="row">
+					<div class="col-sm-5">
+						<div class="map-block-container">
+							<div class="map-block__title">Контакты</div>
+							<div class="map-block__adress">
+								<p>
+									Хабаровск
+								</p>
+								<p>
+									ул. Морозова ПЛ 89, оф 1
+								</p>
+							</div>
+							<div class="map-block__tel">
+								+7 (4212) 45-66-99
+							</div>
+							<a href="mailto:info@esteticadent.ru" class="map-block__email">info@esteticadent.ru</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 	</main>
 
 	<footer class="footer">
@@ -27,6 +362,7 @@
 
 	<script src="js/jquery-1.11.0.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
+	<script src="js/owl.carousel.min.js"></script>
 	<script src="js/main.js"></script>
 </body>
 </html>
