history-page added

--- a/app/pages/doctors.html
+++ b/app/pages/doctors.html
@@ -21,12 +21,12 @@
 	<header class="header">
 		<div class="container">
 			<div class="header-top clearfix">
-				<div class="logo pull-left">
+				<a href="#" class="logo pull-left">
 					<h1 class="logo-text">Estetika</h1>
 					<div class="logo-img-container img-container">
 						<img src="../images/logo.svg" alt="img" class="img-responsive logo-img">
 					</div>
-				</div>
+				</a>
 				<div class="header-top__info pull-right text-right">
 					<a href=".feedback-pop-up" class="header-top__info-link" data-toggle="modal">Заказать звонок</a>
 					<a href="#" class="header-top__info-tel">+7 (4212) 45-66-99</a>
@@ -80,9 +80,9 @@
 
 		<section class="all-doctors-block">
 			<div class="container">
-				<div class="all-doctors-block__title">
+				<h1 class="all-doctors-block__title">
 					Врачи
-				</div>
+				</h1>
 				<ul class="all-doctors-block__list">
 					<li class="all-doctors-block__item row">
 						<div class="col-sm-4">
@@ -345,7 +345,7 @@
 						</div>
 						<div class="form-group-material">
 							<label class="material-label" for="enroll-pop-up__how">Как вы узнали о нас?</label>
-							<textarea class="material-field" id="enroll-pop-up__how" name="how"></textarea>
+							<input class="material-field" id="enroll-pop-up__how" name="how" type="text"></input>
 							<small class="error">Обязательное поле!</small>
 						</div>
 						<button type="submit" class="btn_default_trans feedback-pop__btn-submit">отправить</button>
